@@ -1,4 +1,9 @@
-2005-10-13  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
+2005-10-12  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
+
+	* src/mapinfowindow.c: 
+	* src/mapinfowindow.h: Added. 
+
+2005-10-12  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
 
 	* src/directionswindow.c: 
 	* src/directionswindow.h: Added.
